# RememberMe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
examples/: sample_chat.txt
scripts/: pixel_room_compare_rounds.py  pixel_room_iterate.sh  pixel_room_playwright_regression.py  reimport.py
src/remember_me/: cli.py  controller.py  models.py  telegram_bot.py
src/remember_me/analyzer/: persona.py  relationship_extractor.py  routine.py  sticker.py
src/remember_me/engine/: brave.py  chat.py  emotion.py  pending_events.py  space.py  topic_starter.py
src/remember_me/gui/: app.py  theme.py
src/remember_me/gui/components/: message_bubble.py  pixel_room.py  typing_indicator.py
src/remember_me/gui/pages/: chat.py  home.py  import_flow.py
src/remember_me/importers/: base.py  json_parser.py  netease.py  netease_api.py  plain_text.py  wechat.py
src/remember_me/knowledge/: fetcher.py  store.py
src/remember_me/memory/: governance.py  relationship.py  scratchpad.py  store.py
tests/: test_humanization_behaviors.py  test_knowledge_fetcher.py  test_pixel_room_hooks.py  test_relationship_memory.py  test_telegram_runtime_behavior.py
